Bug 1616444 - Ensure gradients are properly color managed with WebRender. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D66087

--HG--
extra : moz-landing-system : lando